--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -1,8 +1,8 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @import models.timetoteach.classtimetable.SchoolDayTimes
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], schoolDayTimes: SchoolDayTimes)(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], schoolDayTimes: SchoolDayTimes, className: String)(implicit request: AuthenticatedRequest[Any])
 
-@timetoteachAppMain(handler, "Class Timetable",
+@timetoteachAppMain(handler, s"Class Timetable : $className",
     userPictureUri, userFirstName, userFamilyName) {
 
     <div class="container" hidden="true">
