--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -1,9 +1,7 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-@timetoteachAppMain(handler, title, userPictureUri, userFirstName, userFamilyName) {
-
-    <h3 class="header-highlight display-3 text-center">Dashboard</h3>
+@timetoteachAppMain(handler, "Dashboard", userPictureUri, userFirstName, userFamilyName) {
 
     <section id="dashboardContent">
         <div class="container">
