--- a/server/app/views/askInitialPreferences.scala.html
+++ b/server/app/views/askInitialPreferences.scala.html
@@ -189,7 +189,7 @@
                 template: false,
                 showInputs: false,
                 minuteStep: 5,
-                defaultTime: '12:00 AM'
+                defaultTime: '12:00 PM'
             });
             $('#lunchEndTime').timepicker({
                 template: false,
