--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -34,21 +34,21 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#feature-one">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#pricing">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#news">News</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Blog</a>
-                    </li>
+                    @*<li class="nav-item">*@
+                        @*<a class="nav-link" href="/#feature-one">Features</a>*@
+                    @*</li>*@
+                    @*<li class="nav-item">*@
+                        @*<a class="nav-link" href="/#pricing">Pricing</a>*@
+                    @*</li>*@
+                    @*<li class="nav-item">*@
+                        @*<a class="nav-link" href="/#news">News</a>*@
+                    @*</li>*@
+                    @*<li class="nav-item">*@
+                        @*<a class="nav-link" href="/#about">About</a>*@
+                    @*</li>*@
+                    @*<li class="nav-item">*@
+                        @*<a class="nav-link disabled" href="#">Blog</a>*@
+                    @*</li>*@
                     <li class="nav-item nav-login-button">
                         <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
                     </li>
@@ -122,7 +122,7 @@
                     <div class="col-md-6">
                                 &copy; 2017 Time To Teach Ltd
                         <br>
-                        Coded by <a href="http://andyboyle.io">Andy</a>
+                        Coded by <a href="http://andyboyle.io">Andy Boyle</a>
                     </div>
                     <div class="col-md-2">
                         <h6>Our product</h6>
@@ -130,13 +130,13 @@
                             <li><a href="">Features</a></li>
                             <li><a href="">Solutions</a></li>
                             <li><a href="">Plans</a></li>
-                            <li><a href="">Sign in</a></li>
+                            <li><a href="@routes.Application.login()">Sign in</a></li>
                         </ul>
                     </div>
                     <div class="col-md-2">
                         <h6>Our team</h6>
                         <ul class="list-unstyled">
-                            <li><a href="">About</a></li>
+                            <li><a href="#about">About</a></li>
                             <li><a href="">Highlights</a></li>
                             <li><a href="">Investors</a></li>
                             <li><a href="">Partners</a></li>
@@ -146,13 +146,15 @@
                         <h6>Other things</h6>
                         <ul class="list-unstyled">
                             <li><a href="">Jobs</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="mailto:team@@timetoteach.zone?Subject=Enquiry" target="_top">Contact</a></li>
                             <li><a href="">FAQ</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </footer>
+
+
         @* ========================================================================================================*@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
