--- a/server/app/views/signedupcongrats.scala.html
+++ b/server/app/views/signedupcongrats.scala.html
@@ -71,10 +71,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                                &copy; 2017 Startup.logo is not a real thing. If it is, this site was not meant
-                            to be a mockery of it
+                                &copy; 2017 Time To Teach Ltd
                         <br>
-                        Coded by <a href="http://andyboyle.io">Andy</a>
+                        Coded by <a href="http://andyboyle.io">Andy Boyle</a>
                     </div>
                     <div class="col-md-2">
                         <h6>Our product</h6>
@@ -82,13 +81,13 @@
                             <li><a href="">Features</a></li>
                             <li><a href="">Solutions</a></li>
                             <li><a href="">Plans</a></li>
-                            <li><a href="">Sign in</a></li>
+                            <li><a href="@routes.Application.login()">Sign in</a></li>
                         </ul>
                     </div>
                     <div class="col-md-2">
                         <h6>Our team</h6>
                         <ul class="list-unstyled">
-                            <li><a href="">About</a></li>
+                            <li><a href="#about">About</a></li>
                             <li><a href="">Highlights</a></li>
                             <li><a href="">Investors</a></li>
                             <li><a href="">Partners</a></li>
@@ -98,13 +97,14 @@
                         <h6>Other things</h6>
                         <ul class="list-unstyled">
                             <li><a href="">Jobs</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="mailto:team@@timetoteach.zone?Subject=Enquiry" target="_top">Contact</a></li>
                             <li><a href="">FAQ</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </footer>
+
 
         <script>
         window.setTimeout(goToApp, 1000);
