--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -30,7 +30,7 @@
 
         <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
-            <div class="col-sm-5">
+            <div class="col-sm-4">
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -42,13 +42,13 @@
                 </a>
 
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-4">
                 <div id="app-main-screen-title">
                     <h4 class="display-5 text-center">@title</h4>
                 </div>
             </div>
 
-            <div class="col-sm-5">
+            <div class="col-sm-4">
                 <div class="collapse navbar-collapse" id="startupNavbar">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item">
@@ -56,9 +56,6 @@
                         </li>
 
                         @if(userPictureUri.isDefined) {
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">@userFirstName.getOrElse("") @userFamilyName.getOrElse("")</a>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#"><img class="center img-circle-standard" src="@userPictureUri" height="32px"></a>
                             </li>
@@ -85,10 +82,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                                &copy; 2017 Startup.logo is not a real thing. If it is, this site was not meant
-                            to be a mockery of it
+                                &copy; 2017 Time To Teach Ltd
                         <br>
-                        Coded by <a href="http://andyboyle.io">Andy</a>
+                        Coded by <a href="http://andyboyle.io">Andy Boyle</a>
                     </div>
                     <div class="col-md-2">
                         <h6>Our product</h6>
@@ -96,13 +92,13 @@
                             <li><a href="">Features</a></li>
                             <li><a href="">Solutions</a></li>
                             <li><a href="">Plans</a></li>
-                            <li><a href="">Sign in</a></li>
+                            <li><a href="@routes.Application.login()">Sign in</a></li>
                         </ul>
                     </div>
                     <div class="col-md-2">
                         <h6>Our team</h6>
                         <ul class="list-unstyled">
-                            <li><a href="">About</a></li>
+                            <li><a href="#about">About</a></li>
                             <li><a href="">Highlights</a></li>
                             <li><a href="">Investors</a></li>
                             <li><a href="">Partners</a></li>
@@ -112,13 +108,15 @@
                         <h6>Other things</h6>
                         <ul class="list-unstyled">
                             <li><a href="">Jobs</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="mailto:team@@timetoteach.zone?Subject=Enquiry" target="_top">Contact</a></li>
                             <li><a href="">FAQ</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </footer>
+
+
         @* ========================================================================================================*@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
