--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -309,7 +309,7 @@
                 </div>
             </div>
 
-            <div class="clear-cancel-save-buttons">
+            <div id="class-timetable-clear-cancel-save-buttons" class="clear-cancel-save-buttons">
                 <button id="clear-subjects-from-class-timetable-button" type="button" class="btn btn-lg btn-secondary">
                     Clear</button>
                 <button id="cancel-class-timetable-button" type="button" class="btn btn-lg btn-secondary">
