--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -6,16 +6,17 @@
     <section id="dashboardContent">
         <div class="container">
             <div class="row">
-                <div class="col-sm-5 dashboardFadedBackground">
+                <div class="col-md-5 dashboardFadedBackground">
                     <h3 class="display-5 text-center">Planning</h3>
                     <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
                         Class Timetable</a>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Termly Plans</button>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Weekly Plan</button>
                 </div>
-                <div class="col-sm-1">
+                <div class="col-md-1">
                 </div>
-                <div class="col-sm-5 dashboardFadedBackground">
+                <div class="row row-for-mobile"><br></div>
+                <div class="col-md-5 dashboardFadedBackground">
                     <h3 class="display-5 text-center">Resources</h3>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">IDL</button>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Lesson Ideas</button>
@@ -25,15 +26,16 @@
             <div class="row"><br></div>
 
             <div class="row">
-                <div class="col-sm-5 dashboardFadedBackground">
+                <div class="col-md-5 dashboardFadedBackground">
                     <h3 class="display-5 text-center">Communication</h3>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">School Noticeboard</button>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Time To Teach Community</button>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Parents</button>
                 </div>
-                <div class="col-sm-1">
+                <div class="col-md-1">
                 </div>
-                <div class="col-sm-5 dashboardFadedBackground">
+                <div class="row row-for-mobile"><br></div>
+                <div class="col-md-5 dashboardFadedBackground">
                     <h3 class="display-5 text-center">Admin & Reports</h3>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Staff</button>
                     <button type="button" disabled="true" class="btn btn-primary btn-lg dashboard-button">Classrooms</button>
