--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -28,9 +28,8 @@
     <body>
         <div class="d-none g-signin2" ></div>
 
-        <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
-            <div class="col-sm-4">
+        <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -41,14 +40,10 @@
                     <span class="ttt-icon-writing display-5">Time to TEACH</span>
                 </a>
 
-            </div>
-            <div class="col-sm-4">
                 <div id="app-main-screen-title">
                     <h4 class="display-5 text-center">@title</h4>
                 </div>
-            </div>
 
-            <div class="col-sm-4">
                 <div class="collapse navbar-collapse" id="startupNavbar">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item">
@@ -57,9 +52,10 @@
 
                         @if(userPictureUri.isDefined) {
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><img class="center img-circle-standard" src="@userPictureUri" height="32px"></a>
+                                <a class="nav-link" href="#"><img class="img-circle-standard" src="@userPictureUri" height="32px"></a>
                             </li>
                         }
+                        <div class="row row-for-mobile"><br></div>
                         <li class="nav-item nav-login-button">
                         @if(userFirstName.isDefined) {
                             <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
@@ -69,7 +65,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
         </nav>
 
         <div id="appBackground">
