--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -53,6 +53,7 @@ h6 {
 
 #dashboardContent {
     margin-top: 2rem;
+    padding-bottom: 4rem;
 }
 
 #dashboardContent h3 {
@@ -66,6 +67,7 @@ img {
 
 .img-circle-standard {
     border-radius: 50%;
+    float: left;
 }
 
 .nav-login-button {
@@ -306,16 +308,17 @@ img {
 }
 
 .dashboardFadedBackground {
-    min-height: 22rem;
+    min-height: 10rem;
     margin: 0 auto;
     background: rgba(0, 0, 0, 0.20);
-    border-radius: 5%;
+    border-radius: 1%;
 }
 
 .dashboard-button {
     margin-top: 2rem;
     margin-right: 0.5rem;
     margin-left: 0.5rem;
+    margin-bottom: 1rem;
     min-width: 12rem;
 }
 
@@ -327,6 +330,7 @@ img {
 }
 
 #app-main-screen-title {
+    float: right;
     /*margin-left: 2rem;*/
     /*clear: both;*/
     /*display: inline-block;*/
@@ -494,7 +498,30 @@ img {
     text-decoration: none;
 }
 
+#class-timetable-subject-warning {
+    display: none;
+}
+
+#class-timetable-subject-aside{
+    display: none;
+}
+
+#class-timetable-clear-cancel-save-buttons {
+    display: none;
+}
+
+
 @media screen and ( min-width: 991px) {
+    .row-for-mobile {
+        display: none;
+    }
+    .dashboardFadedBackground {
+        min-height: 22rem;
+        margin: 0 auto;
+        background: rgba(0, 0, 0, 0.20);
+        border-radius: 5%;
+    }
+
     .nav-login-button {
         margin-left: 1rem;
         margin-right: 0.5rem;
@@ -504,6 +531,27 @@ img {
         display: flex;
         align-items: center;
     }
+
+    #class-timetable-subject-warning {
+        display: block;
+    }
+
+    #class-timetable-subject-aside{
+        display: block;
+    }
+
+    #class-timetable-clear-cancel-save-buttons {
+        display: block;
+    }
+
+    #app-main-screen-title {
+        width: 100%;
+        margin-left: 2rem;
+        clear: both;
+        display: inline-block;
+        white-space: nowrap;
+    }
+
 }
 
 @media screen and ( min-width: 1200px) {
