--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -138,7 +138,7 @@
 
     <section id="class-timetable-section">
         <div class="container">
-            <div class="row headline-row text-primary">
+            <div id="class-timetable-school-times" class="row headline-row text-primary">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-3 timetable-header">Early Morning</div>
                 <div class="col-sm-1 small-column text-center">Break</div>
@@ -147,7 +147,7 @@
                 <div class="col-sm-3 order timetable-header">Afternoon</div>
             </div>
 
-            <div class="row timetable-time-row">
+            <div id="class-timetable-session-names" class="row timetable-time-row">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-3">
                     <div class="row">
@@ -182,25 +182,27 @@
                 </div>
             </div>
 
+            <div class="row row-for-mobile"><br></div>
+
             <div id="all-the-days-rows">
                 <div class="row dayoftheweek-row align-items-center">
-                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Mon</div>
-                    <div class="col-sm-3 ">
+                    <div class="col-lg-1 text-secondary timetable-dayofweek-header align-self-center" >Monday</div>
+                    <div class="col-lg-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="early-morning-session" data-day-of-the-week="Monday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column "></div>
-                    <div class="col-sm-3">
+                    <div class="col-lg-1 small-column "></div>
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="late-morning-session" data-day-of-the-week="Monday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-lg-1 small-column"></div>
 
-                    <div class="col-sm-3">
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="afternoon-session" data-day-of-the-week="Monday">Empty</button>
@@ -208,24 +210,26 @@
                     </div>
                 </div>
 
+                <div class="row row-for-mobile"><br></div>
+
                 <div class="row dayoftheweek-row align-items-center">
-                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Tue</div>
-                    <div class="col-sm-3 ">
+                    <div class="col-lg-1 text-secondary timetable-dayofweek-header align-self-center" >Tuesday</div>
+                    <div class="col-lg-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="early-morning-session" data-day-of-the-week="Tuesday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column "></div>
-                    <div class="col-sm-3">
+                    <div class="col-lg-1 small-column "></div>
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="late-morning-session" data-day-of-the-week="Tuesday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-lg-1 small-column"></div>
 
-                    <div class="col-sm-3">
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="afternoon-session" data-day-of-the-week="Tuesday">Empty</button>
@@ -233,24 +237,26 @@
                     </div>
                 </div>
 
+                <div class="row row-for-mobile"><br></div>
+
                 <div class="row dayoftheweek-row align-items-center">
-                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Wed</div>
-                    <div class="col-sm-3 ">
+                    <div class="col-lg-1 text-secondary timetable-dayofweek-header align-self-center" >Wednesday</div>
+                    <div class="col-lg-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="early-morning-session" data-day-of-the-week="Wednesday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column "></div>
-                    <div class="col-sm-3">
+                    <div class="col-lg-1 small-column "></div>
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="late-morning-session" data-day-of-the-week="Wednesday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-lg-1 small-column"></div>
 
-                    <div class="col-sm-3">
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="afternoon-session" data-day-of-the-week="Wednesday">Empty</button>
@@ -258,24 +264,26 @@
                     </div>
                 </div>
 
+                <div class="row row-for-mobile"><br></div>
+
                 <div class="row dayoftheweek-row align-items-center">
-                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Thu</div>
-                    <div class="col-sm-3 ">
+                    <div class="col-lg-1 text-secondary timetable-dayofweek-header align-self-center" >Thursday</div>
+                    <div class="col-lg-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="early-morning-session" data-day-of-the-week="Thursday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column "></div>
-                    <div class="col-sm-3">
+                    <div class="col-lg-1 small-column "></div>
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="late-morning-session" data-day-of-the-week="Thursday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-lg-1 small-column"></div>
 
-                    <div class="col-sm-3">
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="afternoon-session" data-day-of-the-week="Thursday">Empty</button>
@@ -283,24 +291,26 @@
                     </div>
                 </div>
 
+                <div class="row row-for-mobile"><br></div>
+
                 <div class="row dayoftheweek-row align-items-center">
-                    <div class="col-sm-1 text-secondary timetable-dayofweek-header align-self-center" >Fri</div>
-                    <div class="col-sm-3 ">
+                    <div class="col-lg-1 text-secondary timetable-dayofweek-header align-self-center" >Friday</div>
+                    <div class="col-lg-3 ">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="early-morning-session" data-day-of-the-week="Friday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column "></div>
-                    <div class="col-sm-3">
+                    <div class="col-lg-1 small-column "></div>
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="late-morning-session" data-day-of-the-week="Friday">Empty</button>
                         </div>
                     </div>
-                    <div class="col-sm-1 small-column"></div>
+                    <div class="col-lg-1 small-column"></div>
 
-                    <div class="col-sm-3">
+                    <div class="col-lg-3">
                         <div class="row">
                             <button disabled="true" class="col-12 rounded subject subject-empty"
                             data-timetable-session="afternoon-session" data-day-of-the-week="Friday">Empty</button>
@@ -308,6 +318,8 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row row-for-mobile"><br></div>
 
             <div id="class-timetable-clear-cancel-save-buttons" class="clear-cancel-save-buttons">
                 <button id="clear-subjects-from-class-timetable-button" type="button" class="btn btn-lg btn-secondary">
