--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -495,7 +495,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="about-text about-us">
-                                <img class="img-circle-standard" src="@routes.Assets.versioned("images/yvonne.jpg")"
+                                <img class="img-circle-standard about-us-img" src="@routes.Assets.versioned("images/yvonne.jpg")"
                                 alt="Yvonne Boyle" height="178px">
                                 <p class="lead about-us-name">Yvonne Boyle</p>
                                 <p><strong>Primary Teacher</strong></p>
@@ -504,7 +504,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="about-text about-us">
-                                <img class="img-circle-standard" src="@routes.Assets.versioned("images/andy.jpg")"
+                                <img class="img-circle-standard about-us-img" src="@routes.Assets.versioned("images/andy.jpg")"
                                 alt="Andy Boyle" height="178px">
                                 <p class="lead about-us-name">Andy Boyle</p>
                                 <p><strong>Senior Software Engineer / Consultant</strong></p>
