--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -516,7 +516,8 @@
                     <div id="follow-us" class="row text-center">
                         <div class="col-md-12">
                             <a href="https://twitter.com/timetoteachzone?ref_src=twsrc%5Etfw"
-                            class="twitter-follow-button" data-size="large" data-show-count="false">Follow @@timetoteachzone</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                            class="twitter-follow-button" data-size="large" data-show-count="false">
+                                Follow @@timetoteachzone</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                             @*<a href="" class="btn btn-sm btn-outline-secondary">facebook</a>*@
                             @*<a href="" class="btn btn-sm btn-outline-secondary">youtube</a>*@
                         </div>
